<resources>
    <string name="app_name">Chatbot</string>
    <string name="cleaning"><h1><b>Pembersihan Komponen pada PC</b></h1>\n
        Dalam melakukan pembersihan komponen PC seorang teknisi utama harus mengikuti cara dan prosedur yang dilaksanakan, karena antara komponen satu dengan yang lain berbeda, sehingga dalam pembersihannya memiliki urutan atau aturan tertentu dibawah ini komponen PC yang perlu dilakukan perawatan. \n
        \n1. Casing \n Beberapa hal yang harus diperhatikan dalam membersihkan casing computer sebagai berikut :\n
        <ul><li>Pada bagian sudut depan, perlu diperhatikan kabel-kabel yang mudah lepas akibat hentakan, terutaa pada bagian tombol saklar. </li>\n<li>Pada bagian belakang, yang perlu dibersihkan adalah ventilasi atau tempat fan (kipas) karena kipas adalah tempat berkumpulnya agin yang membawa debu/kotoran.
        </li></ul>\n
       \n 2. Floppy Drive\n
        Langkah-langkah pembersihannya sebagai berikut:\n
       <ul><li>Operasi sistem komputer</li>\n<li>Masukkan disk clearner yang telah diberi cairan pembersih ke drive A.</li>\n<li>Pilih drive A:/ sehingga komputer akan membaca drive A, karena piringandisket diganti dengan kertas tisu yang diberi cairan pembersih, maka head akan tersentuh oleh tisu tersebut sehingga akan membersihkan head dari kotoran debu atau kotoran yang lain.</li></ul>\n
       \n 3. CD-ROM dan CD-RW\n
        Langkah-langkah pembersihannya sebagai berikut:\n
        <li>Nyalakan komputer</li>\n
        <li>Setelah itu masukkkan CD Cleaner, CD Cleaner berputar dengan sikat atau sirip yang melekat pada disk akan menyikat opic atau lensa pada CD-ROM atau CD-RW secara otomatis.</li>\n
        \n4.VGA Card\n
        <p>VGA card atau sering disebut display adapter adalah komponen komputer yang berfungsi untuk mengelolaj grafik untuk ditampilkan ke dalam layar monitor. Masalah yang sering timbul adalam VGA adalah panas yang berlebihan, sehinnga untuk mengurangi panas yang berlebihan perlu diperhatikan headsink dan fan nya. Sebagai perawatannya perlu diperlakukan pembersihan dari debu atau kotoran yang lain. VGA card juga kecil, segingga harus disesuaikan denganukuran fan nya. Selain itu VGA Card sering bermasalah pada fan yang berisik atau berbunyi dengan keras.</p>
        \n<p>Masalah uni juga dapat disebabkan dudukan fan yang tidak kuat sehingga tidak daat menopang fan dengan baik. Untuk mengatasi hal ini dapat dilakukan dengan membersihkan, dan mengencangkan posisi fan dengan tetapat sesuai dengan posisinya. Sebagai perawatan perlu dilakukan pembersihan dari debu atau kotaran yang lain dalam membersihkannya fan dan head sink cukup dengan kuas kecil harus disesuaikan dengan ukuran fan (kipas). Bisa juga melakuka pengencanga pada posisi fan yang sesuai pada posisinya.</p>

        \n\n5. Memory\n
        <p>RAM merupakan komponen primer dalam sebuah komputer, RAM bertinda sebagai media penyimpanan sementara apada distem. Besar kecil ny kapasistas RAM tergantung dari kebutuhan sistem yang akan digunakan oleh program. Semakin besar kapasitas RAM maka akan semakin cepat dana stabil program tersebut dijalanka. RAM bermacam-macam jenisnya diantaranya yang masih beredar adalah sebagai berikut: EDO RAM (Banyak dijumpai pada komputer lama dan mulai jarang ditemukan),  SDRAM, DDR SDRAM, dan RDRAM. Antara jenis-jenis tersebut berbeda bentuk fisikdan slot pad motherboard nya. RAM perlu dilakukan perawatan agar selalu bekerja denganoptimal. Gangguan pada RAM terletak pada konektor atau kaki-kakinya, dimana jika RAM sering dilepas dan tersetuh oleh tangan dapat meyebabkan korosi bahkan RAM rusak akibat listrik statis.</p>\n<p>Untuk membersihkan RAM dari korosi akibat sentuhan tangan dapat dilakukan dengan mengunakan cairan pembersih atau cukup dengan karet penghapus dengan cara menggosokkkan pada kaki RAM. Selain itu juga perlu diperhatikan pemasangan pada slot RAM, perlu dipastikan RAM tertanca dengan sempurna karena jika tidak, maka selain tidak terdeteksi oleh sisitem juga dapat mengakibatkan kerusakan RAM. Memersihkan RAM dari korosi dapat digunakan cairan peembersih/karet penghapus dengan menggosokkan pada kaki/pn RAM.</p>\n
    \n6. Hardisk\n
        <p>Hard disk merupakan komponen yang penting dalam sebuah komputer , karena sistem operasi dan semua programa beserta data-data tersimpan dalam hardisk. Hard disk merupakan barang yang mudah rusak. Untuk melakukan perawatan dilakukan dari sisi harwere dan sofware. Untuk perawatan hard disk dari sisi hardwere , perlu ditambahkan sebuah fan untuk mengurangi panas pada hard disk. Fan ini sangat direkomendasikan untuk hard disk dengan kecepatan 7200 rpm ke atas. Selain itu perlu diperhatikan pengaturan kabel data agar sirkulasi udara dapat berjalan lancar. Untuk perawatan dari sisi sofware, cukup dengan tool-tool yang telah tersedia ketika menginstal sistem operasi. Tool tersebut meiliputi scandisk, dan disk dafragmenter. Selain tool tersebut juga terdapat tool yang digunakan untuk melakukan low-levelformat. Low level formaat digunakan untuk melakukan konfigurasi ulang pada hard disk meiputi pengaturan head, cylender, dan sector. Low level format merupakan format dari segi fisik. Untuk masing-masing merk hard disk mmiliki programa Quantum menggunakan zerrofill atau zdisk, maxtor dengan mud dan untuk westren digital dengan wd—diag. Scandisk adalah tool yang digunakan untuk memerikasa strukrur file sistem, tebel lokasi file (file allocation table), dan dapat untuk mengetahui ada atau tidaknya bad sector. Scandisk akan berjalan dengan otomatis setiap start jika komputer tidak dimatikan dengan benar atau terjadi kegaggalan listrik. Disk defragmeter adalah tool yang digunakan untuk mengatur struktur atau tata letak file sehingga akan mengurangi faragmentasi sebuah space hard disk.Disk defragmenter perlu dilakukan secara berkala hal ini akan meningkatkan performa sistem dan ruang hard disk.</p>\n
        \n7. Motherboard\n
        <p>Motherboard merupakan atau termasuk harwere (komponen yang nyata bisa dilihat). Dimana disana terdapat beberapa slot dan lain sebagainya. Dimana slot itu merupakan latak dari komponen-komponen yang lain seperti RAM, sound card dll. Dan sangat rentang sekali terhadap kotoran misal debu. Debu merupakan partikel kecilseperti tanah yang sangat halus sekali yang tebawa oleh angin. Meskipun sangat kecil ukurannya, tapi apabila dibiarkan terus menerus akan menjadi sebuah masalahyang besaar, misal pengerasan debu sangat menggangu sekali kinerja CPU itu sendiri. Debu jyga menyebabkan suhu yang ada didalam CPU meningkat derastis, sehingga menganggu kinerja CPU/komputer itu sendiri. Sehingga penanganan khusus pada masalah debu ini. Pada Motherboard, debu juga menjadi musuh baginya. Kenapa tidak, seperti yang diutarakan yaitu dapat menigkatkan suhu dan menghambat kinerja kompoenn itu sendiri. Sebelum melakukan perawatan Motherboard, maka terlebih dahulu kita sipakan alat-alat nya, yaitu :</p>\n
        <li>Kuas</li>\n
        <li>Tisu/kain halus ini kadang diperlukan kadang tidak </li>\n
        <li>Penyedot debu mini bisa juga menggunakan kompresor</li>\n
        Langkah-Langakah : \n
        <li>Bersihkan seluruh bagian Motherboard dengan kuas</li>\n
        <li>Setelah itu gunakan penyedot debu mini atau kompresor agar debu yang tersisa bisa hilang. Kompres atau sedot semua bagian Motherboard sampai benar-benar bersih.</li>\n
        <li>Kain halus digunakan apabila terdapat debu yang sulit dihilangkan yaitu debu/kotoran yang sudah mengering. Caranya yaitu semprotkan kain halus atau tisu dengan cairan pembersih, setalah itu usapkan pada bagian komponen yang terkena debu (Debu yang sudah mengering).</li>\n
        <li>Setelah semua dikira bersih, kemudian pasang kembali Motherboard kedalam CPU.</li>\n
        <li>Pasang kembali Card-card seperti RAM dlldan power Supply</li>\n
        <li>Gunakan Uniterruptible Power Supply (UPS) dan stavolot sebagai pengaman tegangan listrik sehingga tidak terjadinya pengaruh terhadap kinerja mainboard apabila terjadi perubahan tegangan listrik secara tiba-tiba.</li>\n
        <li>Saat membersihkan agar selalu memperhatikan ada atau tidaknya baut-baut yang tertinggal didalam main board, apabila adasegera angkat dari tempatnya untuk menghindari terjadinya hubungan pendek(korslet)</li>\n
    </string>
    <string name="prosedures"><li>Sebisa mungkin tegangan listrik yang dikomsumsi komputer harus stabil. Tegangan listrik yang terlalu rendah dan terlalu tinggi dua-duanya merusak perangkat keras komputer. Oleh karena itu digunkanlah Stabilizer dan UPS untuk menjaga hal tersebut.</li></string>
    <string name="prosedures1"><li>Hidup matikan komputer sesuai prosedur. Jangan sekali-sekali langsung mencaput kabel listrik komputer pada saat komuter sedang beroperasi. Tindakan ini sangat berbahaa bagi kestabilan Power Suply komputer.</li>\n <li>Komputer harus terhindar dari sengatan matahari secara langsung</li>\n <li>Jangan menaruh gelas dll yang berisi air atau benda cair lainnya demi menghindari siraman benda cair terhadap perangkat keras.</li>\n<li>Hindari memempatkan peralatan yang bersifat/dapat menimbulkan magnet di sekita komputer, karena akan mengacaukan monitor dan merusak perangkat keras internal unit CPU.</li>\n<li>Secara berkala bersihkan bagian komputer dari debu yang melekat dengan mengunakan kuas cat, lap halus dan alat penyedot udara</li></string>
    <string name="prosedures2"><li>Secara keseluruhan bersihkan permukaan Mainboard dengan mengunakan pompa udara untuk menghilangkan debu. Terutama pada bagian socket memory karena jika socket ini kotor/berdebu maka memory tidak akan bekerja maksimal.</li></string>
    <string name="prosedure3"><li>Bersihkan heatsink dan fan cooler CPU dengan kuas halus atau pompa udara.</li></string>
    <string name="prosedure4"><li>Buka memory RAM dengan hati-hati dan bersihkan dengan lap halus terutama pada bagaian kakinya.</li></string>
    <string name="prosedure5"><li>Buka power suply dengan obeng dan bersihkan dengan hati-hati.</li></string>
    <string name="prosedure6"><li>Bersihkan semua port ekstrenal yang ada pada Mainboard, terutama port USB</li></string>
    <string name="prosedure7"><li>Jika anda menggunakan VGA card ad on bersihkan terutama pada bagian heat sink dari debu</li>\n<li>Bersihkan dengan menggunakan kuas halus bagagian permukaan keyboard</li></string>
    <string name="kopdasar"><li>Menerapkan perawatan perangkat keras komputer</li>\n<li>Melakukan perawatan perangkat keras komputer</li></string>
    <string name="tjpembelajaran"><li>Menjelaskan jenis-jenis perawatan perangkat keras</li>\n<li>Menentukan cara perawatan perangkat keras komputer</li>\n<li>Mengurutkan langkah-langkah perawatan perangkat keras komputer</li>\n<li>Melakukan perawatan perangkat keras komputer</li></string>
</resources>